Minior changes on flag and title responsivity toolbar

--- a/src/app/components/main-content/main-content.component.html
+++ b/src/app/components/main-content/main-content.component.html
@@ -1,34 +1,38 @@
-<div fxLayout="row" fxLayoutAlign="center none" *ngIf="selectedCountry.length !== 0">
-    <img [src]="flag">
+<div fxLayout="row" fxLayoutAlign="center center" *ngIf="selectedCountry.length !== 0 && !loading" class="d-flex">
+    <img width="110px" [src]="flag" class="nation-flag mat-elevation-z1">
     <div>
-        <h3 class="mat-display-1 mat-h3">{{selectedCountryName}}</h3>
+        <h3 class="mat-display-1 mat-h3">{{ selectedCountryName }}</h3>
     </div>
 </div>
 
-<div fxLayout="row" fxLayoutAlign="space-around center" *ngIf="!loading" class="mt-10">
-    <mat-card class="content-card">
+<div fxLayout="row" fxLayoutAlign="space-around center" *ngIf="!loading" class="mt-10 d-flex">
+    <mat-card class="content-card mt-10">
         <mat-card-header>
             <mat-card-title>Total cases</mat-card-title>
-            <mat-card-subtitle>{{ casesWorld }}</mat-card-subtitle>
+            <mat-card-subtitle>{{ casesWorld | number }} <div class="d-inline" matTooltip="Today cases">(+{{ todayCases
+                    | number }})</div>
+            </mat-card-subtitle>
         </mat-card-header>
     </mat-card>
-    <mat-card class="content-card">
+    <mat-card class="content-card mt-10">
         <mat-card-header>
             <mat-card-title>Active cases</mat-card-title>
-            <mat-card-subtitle>{{ activeWorld }}</mat-card-subtitle>
+            <mat-card-subtitle>{{ activeWorld | number }}</mat-card-subtitle>
         </mat-card-header>
     </mat-card>
-    <mat-card class="content-card">
+    <mat-card class="content-card mt-10">
         <mat-card-header>
             <mat-card-title>Recovered</mat-card-title>
-            <mat-card-subtitle>{{ recoveredWorld }}</mat-card-subtitle>
+            <mat-card-subtitle>{{ recoveredWorld | number }}</mat-card-subtitle>
         </mat-card-header>
     </mat-card>
-    <mat-card class="content-card">
+    <mat-card class="content-card mt-10">
         <mat-card-header>
             <mat-card-title>Deaths</mat-card-title>
-            <mat-card-subtitle>{{ deathsWorld }}</mat-card-subtitle>
+            <mat-card-subtitle>{{ deathsWorld | number }}</mat-card-subtitle>
         </mat-card-header>
     </mat-card>
 </div>
-<mat-spinner *ngIf="loading"></mat-spinner>
+<div fxLayout="row" fxLayoutAlign="space-around center" *ngIf="loading" class="mt-10">
+    <mat-spinner></mat-spinner>
+</div>
