--- a/src/app/components/main-content/main-content.component.css
+++ b/src/app/components/main-content/main-content.component.css
@@ -1,3 +1,16 @@
 .content-card {
-    max-width: 400px;
+  width: 200px;
+}
+
+img.nation-flag {
+  width: 110px;
+  border-radius: 100%;
+  object-fit: cover;
+  margin-right:20px;
+}
+
+@media screen and(max-width:720px) {
+  img.nation-flag {
+    margin-right: 0;
   }
+}
