--- a/src/styles.css
+++ b/src/styles.css
@@ -1,26 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400&display=swap');
+
 html, body {
     height: 100%;
 }
 
 body {
     margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-family: 'Poppins', sans-serif;
+}
+
+* {
+    font-family: 'Poppins', sans-serif;
 }
 
 .mt-10 {
-    margin-top:1em;
+    margin-top: 1em;
 }
 
 .d-flex {
-    display:flex!important;
+    display: flex!important;
     flex-wrap: wrap;
 }
 
 .d-inline {
-    display:inline;
+    display: inline;
 }
+
 .padding-0 {
-    padding:0!important;
+    padding: 0!important;
+}
+
+.font-bold {
+    font-weight: 500!important;
+}
+
+.text-center {
+    text-align: center;
 }
